# vector-search

./: .gitignore  .st_app.py.swp  README.md  citr_en_sents.lzma  gen-requirements.sh  gen_tokens_encoded_data.py  packages.txt  pyproject.toml  pyrightconfig.json  requirements.txt  run-check-all.bat  run-pm2-streamlit.sh  run-push.bat  run_st_app.py  st_app.py
data/: catcher-in-the-rye-boll-de.lzma  catcher-in-the-rye-en.lzma  catcher-in-the-rye-shixianrong-zh.lzma  catcher-in-the-rye-sunzhongxu-zh.lzma  fangfang-en.lzma  fangfang-zh.lzma
joblib_cache/vector_search/gen_tokens/list_tokens/: func_code.py
joblib_cache/vector_search/gen_tokens/list_tokens/00a172102253f68096c1d1a65873aa65/: metadata.json  output.pkl
links/: Der Fänger im Roggen (Archiv).URL  Heinrich Böll-Selindzher_Der_Fanger_im_Roggen_RuLit_Net_258279.epub  📖 Jerome D. Salinger - Der Fänger im Roggen.. Hallo Nachbarn! Deutsch.URL
tests/: test_gen_tokens.py  test_vector_search.py
texts/: catcher-in-the-rye-sunzhongxu-zh.txt
vector_search/: __init__.py  _vector_search.py  fetch_embed.py  gen_tokens.py  load_text.py  seg_text.py  sent_tokenizer.py  vector_search.py
vector_search/joblibcache/vector_search/vector_search/faiss_flat_ip/: func_code.py
vector_search/joblibcache/vector_search/vector_search/faiss_flat_ip/0aefb1e1ccabd0a9698d03c9c775d5cc/: metadata.json
vector_search/joblibcache/vector_search/vector_search/faiss_flat_ip/173a3c68b7639f8e407143171a793110/: metadata.json
vector_search/joblibcache/vector_search/vector_search/faiss_flat_l2/: func_code.py
(+13 files in other folders)
