[tool.poetry]
name = "vector-search"
version = "0.1.0"
description = "vector search based on faiss (currently just flatl2 and flatip)"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/vector-search"

[tool.poetry.dependencies]
python = "^3.6.1"
logzero = "^1.6.3"
faiss-cpu = "^1.6.5"
varname = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
flake8 = "^3.8.4"
pep257 = "^0.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
